--- a/style.css
+++ b/style.css
@@ -34,6 +34,19 @@ i.icone{
 .Icon-starColor{
   color: #F2F2F2;
 }
+.card-text{
+  padding-left: 12px;
+ }
+.card-text p{
+  margin-bottom: 0px;
+  margin-top: 0px;
+  line-height: 2em;
+}
+.card-text h3{
+  margin-bottom: 0px;
+  margin-top: 5px;
+
+}
 
 /* navigation*/
  nav{
@@ -85,7 +98,6 @@ input.search{
   padding-right: 0px;
   cursor: pointer;
 }
-
 button{
   font-weight: bold;
   border-radius: 0 15px 15px 0;
@@ -119,7 +131,6 @@ button{
   margin-bottom: 11px;
   border: 1px solid #F2F2F2;
   border-radius: 25px 25px 25px 25px;
-  
 }
 .box_filtre i{
   background-color: rgba(180, 213, 243, 0.651);
@@ -169,6 +180,7 @@ section{
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
+  margin-top: 20px;
 }
  article{
   background-color: #F2F2F2;
@@ -195,18 +207,11 @@ section{
   margin-left: 2px;
   margin-top: 3px;
 }
-.card-text h3{
-  margin-top: 0px;
-  margin-top: 5px;
-
-}
-
-
 /* Section populaire*/
 aside{
   background-color: #F2F2F2;
-  width: 27%;
-  margin-left: 25px;
+  width: 29%;
+  margin-left: 12px;
   border-radius: 17px
  }
  .title{
@@ -229,10 +234,34 @@ aside{
   height: 148px;
   border-radius: 17px 0 0 17px;
   margin-left: 4px;
+}
+  /*section activites Marseille*/
+  section.album{
+    border: 2px solid rebeccapurple;
+
+  }
+ #activite{
+   display: flex;
+   flex-wrap: wrap;
+   width: 100%;
+ }
+ .item-marseille{
+  width: 25%;
+ }
+ .item-marseille.card-image{
+   border: seagreen 5px solid;
+   margin-left: 33px;
+}
+ .item-marseille img{
+  width: 301px;
+ }
+ .img1{
+  height: 367px;
+  
  }
 
 
-@media (max-width: 800px){
+@media (max-width: 1200px){
 nav{
   position: relative;
 }
@@ -294,11 +323,25 @@ button{
 /*hebergement et populaire*/
 section{
 display: flex;
-flex-direction: column;
+flex-direction: column-reverse;
 }
+aside, article{
+  width: 100%;
+  margin-left: 0;
+}
+article{
+  background-color: white;
+  margin-top: 20px;
+}
+#activite{ 
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  flex: 1;
+  width: 100%;
+ }
 }
   
-
 
  
  
@@ -308,48 +351,7 @@ flex-direction: column;
 /*Recherche*/
 
 /*.card3{
-  border: 2px solid;
-}
-.img2 {
-  height: 168px;
-  width: 296px;
-  object-fit: cover;
-  border-radius: 17px 17px 0 0;
-}
-.img3 {
-  height: 105px;
-  width: 294px;
-  margin-top: 113px;
-  border-radius: 17px 17px 0 0;
-  object-fit: cover;
- justify-items: flex-end;
-}
-.img4 {
-  width: 294px;
-  height: 137px;
-  object-fit: cover;
-  object-position: top;
-  border-radius: 17px 17px 0 0;
-}
-.img5 {
-  width: 294px;
-  height: 157px;
-  object-fit: cover;
-  object-position: top;
-  border-radius: 17px 17px 0 0;
-  margin-top: 92px;
-}
-.activite5.text-activite{
-  border: 2px solid;
-padding-right: 0px;
-margin-right: 16px;
-margin-top: -5px;
-}
-.text-activite {
- color: black;
- font-weight: bold;
-  padding-left: 13px;
-}
+ 
 /*Pied ce Page
 footer {
   width: 100%;
