--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 body{
   background-color: white;
   font-family: Raleway;
+  margin: 0;
 }
 main{
   margin-left: 15px;
@@ -64,7 +65,6 @@ li{
   margin-left: 15px;
   margin-top: 8px;
 }
-
 nav{
   display: flex;
   flex: 1;
@@ -153,7 +153,6 @@ button{
   color: #0065fc;
   width: 34px;
   height: 32px;
-  margin-left: -2px;
   padding-top: 15px;
   border-radius: 100%;
  }
@@ -171,7 +170,6 @@ button{
 }
 .box:hover .icone{
   background: rgb(139, 240, 226);
-  transition-duration: 0,20s;
 }
 /*Information*/
 .info{
@@ -213,6 +211,9 @@ article h3{
 article, aside{
   background-color: #F2F2F2;
   border-radius: 17px;
+}
+.album{
+  margin-top: 50px;
 }
 #hebergement{
   display: flex;
@@ -280,7 +281,7 @@ aside i{
   .card1,
   .card2{ 
     border: 2px solid #F2F2F2;
-    border-radius: 17px;
+    border-radius: 20px;
     margin-bottom: 8px;
     overflow: hidden;
   }
@@ -306,28 +307,24 @@ aside i{
     border-radius: 17px 17px 0 0;
   }
   .img1{
-  height: 352px;
-  object-fit: none;
+    height: 352px;
+    object-fit: none;
  }
   .img2{
   height: 158px;
-  object-fit: cover;
-}
+ }
   .img3{
   height: 117px;
-  object-fit: cover;
   object-position: top;
   margin-top: 32px;
 }
   .img4{
   height: 132px;
-  object-fit: cover;
   object-position: top;
 }
   .img5{
   height: 155px;
-  object-fit: cover;
-  object-position: top;
+   object-position: top;
 }
  
 /*Pied de Page*/
@@ -370,14 +367,12 @@ footer{
 .logo{
   margin-top: 1px;
 }
-
 .nav ul{
 text-align: center;
 margin-top: 22px;
 padding-right: 83px;
 padding-right: 77px;
 }
-
 .nav_item.hebergement{ 
   color: #0065fc;
   border-top: none;
@@ -407,18 +402,22 @@ button{
   color: white;
 }
 .colonne_marseille,
-.card img,
+.card .img,
 .card1 .img2,
 .card1 .img3,
 .card2 .img4,
 .card2 .img5{ 
   width: 100%;
-  overflow: hidden;
+
 }
 #hebergement img,
 .card-image,
-.card-image img{
+.card-image img,
+.card .img1{
   width: 100%;
+}
+.card1 .img3{
+  height: 137px;
 }
 #populaire .card-image{
   margin-left: 10px;
@@ -459,8 +458,4 @@ background-color: white;
 #hebergement img{
   height: 197px;
 }
-.card-footer{
-  padding-right: 70px;
-}
-
 }
