header et footer

--- a/style.css
+++ b/style.css
@@ -65,11 +65,6 @@ li{
   margin-left: 15px;
   margin-top: 8px;
 }
-/*nav{
-  display: flex;
-  flex: 1;
-  justify-content: right;
-}*/
 nav ul{
   display: flex;
   padding-left: 0px;
@@ -188,7 +183,7 @@ button{
   border: 1px solid #F2F2F2;
   border-radius: 100%;
   height: 20px;
-  width: 16px;
+  width: 17px;
   margin-top: 9px;
   padding-top: 5px;
 }
@@ -272,7 +267,6 @@ aside i{
   margin-top: 50px;
 }
 
-
   /*section activites Marseille*/
   #activite{
     display: flex;
@@ -335,6 +329,8 @@ aside i{
 footer{
   display: flex;
   background-color: #F2F2F2;
+  padding-right: 41px;
+  margin-right: 6px;
 }
 .card-footer{
   margin-left: 15px;
@@ -370,8 +366,8 @@ header{
   position: absolute;
   top: 0;
   right:0;
-  padding-right: 8px;
-  margin-top: 5px;
+  padding-right: 21px;
+  margin-top: 9px;
 }
 .logo{
   margin-top: 1px;
@@ -398,6 +394,7 @@ nav li a{
   border-top: none;
   border-bottom: 2px solid #F2F2F2;
   padding-top: 22px;
+  padding-left: 67px;
   display: flex;
   justify-content: center;
 }
@@ -451,6 +448,7 @@ form .search{
 footer{
   display: flex;
   flex-direction: column;
+  margin-right: 5px;
 }
 }
 @media (max-width: 1024px){
